TEST_PROGRAMS/INVALID/dongkyu_kim/incorrect5.min
# incorrect 5

var while: int;

while = -1 + 4;

print while;

